--- a/views/app.pug
+++ b/views/app.pug
@@ -6,7 +6,7 @@ html(lang="en")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     if dev
-      meta(http-equiv='Content-Security-Policy' content=`default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://www.josephojo.com https://res.cloudinary.com/${cloud_name}/; 
+      meta(http-equiv='Content-Security-Policy' content=`default-src 'self'; font-src 'self' data: https://www.josephojo.com https://josephojo.netlify.com; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://www.josephojo.com https://res.cloudinary.com/${cloud_name}/; 
     script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'none' ${dev ? " * blob: ws:" : ""}; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/${cloud_name}/;`)
 
     meta(name='robots' content='all')
