--- a/views/app.pug
+++ b/views/app.pug
@@ -6,8 +6,9 @@ html(lang="en")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     if dev
-      meta(http-equiv='Content-Security-Policy' content=`default-src 'self'; font-src 'self' data: https://www.josephojo.com https://josephojo.netlify.com; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://www.josephojo.com https://res.cloudinary.com/${cloud_name}/; 
-    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'none' ${dev ? " * blob: ws:" : ""}; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/${cloud_name}/;`)
+      meta(http-equiv='Content-Security-Policy' content=`
+      default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""}; 
+      block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/${cloud_name}/;`)
 
     meta(name='robots' content='all')
     meta(name='title' content=page.title)
@@ -46,9 +47,9 @@ html(lang="en")
     link(rel='apple-touch-icon', sizes='152x152', href='/apple-icon-152x152.png')
     link(rel='apple-touch-icon', sizes='180x180', href='/apple-icon-180x180.png')
 
-    //- link(rel="prefetch" href="manifest.webmanifest" as="fetch" crossorigin)
-    //- link(rel="prefetch" href="/favicon-32x32.png" as="image" crossorigin)
-    //- link(rel="prefetch" href="/android-icon-144x144.png" as="image" crossorigin)
+    link(rel="prefetch" href="manifest.webmanifest" as="fetch" crossorigin)
+    link(rel="prefetch" href="/favicon-32x32.png" as="image" crossorigin)
+    link(rel="prefetch" href="/android-icon-144x144.png" as="image" crossorigin)
 
     link(rel='icon', type='image/png', sizes='512x512', href='/android-icon-512x512.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/android-icon-192x192.png')
