--- a/views/app.pug
+++ b/views/app.pug
@@ -70,7 +70,7 @@ html(lang="en")
     link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
     //- link(rel="prefetch" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-    //- link(rel="prefetch" href="/fonts/varela-round--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
+    link(rel="prefetch" href="/app.modern.min.js" as="script" type="text/javascript" crossorigin)
 
     link(rel='stylesheet' href='./css/app.min.css' inline async)
 
