--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -109,18 +109,24 @@ img {
 }
 
 .placeholder-img {
+    image-rendering: optimizeSpeed; 
     transition: opacity .8s ease;
+    will-change: transform;
     transform: scale(1.2);
     opacity: 1;
 }
 
 .core-img {
+    image-rendering: high-quality; 
+    transition: filter .7s ease;
+    will-change: filter;
     position: absolute;
+    filter: blur(3px);
     left: 0;
     top: 0;
 
     &-show {
-        // filter: blur(0px) !important;
+        filter: blur(0px) !important;
         opacity: 0;
         z-index: 0;
     }
