--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -126,9 +126,13 @@ img {
     top: 0;
 
     &-show {
-        filter: blur(0px) !important;
-        opacity: 0;
-        z-index: 0;
+        & .core-img {
+            filter: blur(0px) !important;
+        }
+        
+        & .placeholder-img {
+            opacity: 0;
+        }
     }
 }
 
