--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -54,7 +54,7 @@
             
             @at-root {
                 .effect-parallax .layer-image-overlay {
-                    opacity: 0.35 !important;
+                    opacity: 0.35;
                 }
             }
         }
