--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -284,6 +284,8 @@
         }
 
         &-tall {
+            width: 100%;
+            height: auto;
             max-height: 800px;
         }
     }
