--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -116,7 +116,7 @@ img {
     opacity: 1;
 }
 
-.core-img {
+.core-img, .no-script-img {
     image-rendering: high-quality; 
     position: absolute;
     left: 0;
