--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -17,7 +17,7 @@ mixin image(value)
           img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw" width="100vw")
         picture
           //- source(srcset!=`${_src}.webp?w=70&quality=100&effect=blur:150` sizes="100vw" type='image/webp' inline="inline")
-          img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150` sizes="100w" alt=_alt  loading="auto" width="100w" inline)
+          img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150` sizes="100w" alt=_alt  loading="lazy" width="100w" inline)
         noscript Javascript is necesscary for this sites awesome experience.
           img.no-script-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="100vw")
     .layer-image-overlay
