--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -158,6 +158,10 @@
                 }
             }
 
+            &:active {
+                color: $primary;
+            }
+
             &-focus {
                 color: $primary-dark;
 
