--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -29,7 +29,7 @@ mixin link(value)
   - let _class = _value.class;
   - let _href = _value.href;
 
-  a(href=_href class=_class)= _content
+  a(href=_href class=_class tabindex="1")= _content
     block
 
 
