--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -296,7 +296,7 @@
     }
 
     &-action-center {
-        transition: opacity .4s ease 0s;
+        transition: transform .8s ease 0s;
         font-size: 24px;
         position: fixed;
         bottom: 15px;
@@ -305,11 +305,11 @@
         right: 0;
 
         &-hide {
-            opacity: 0;
+            transform: translateX(30%);
         }
 
         &-show {
-            opacity: 1;
+            transform: translateX(0);
         }
     }
 }
