--- a/views/app.pug
+++ b/views/app.pug
@@ -229,8 +229,8 @@ html(lang="en")
                       span.btn-content 2019 Okiki Ojo
 
       if !page.noFooter
-        +footer("Made with ❤ by Okiki Ojo.") | 
-        a(href="/sitemap") Sitemap
+        +footer("Made with ❤ by Okiki Ojo | ") 
+        a(href="/sitemap") Sitemap.
     else
       section.layer.layer-dark
         article.layout-contain
