--- a/src/scss/components/icon.scss
+++ b/src/scss/components/icon.scss
@@ -97,6 +97,10 @@
     }
 }
 
+.pointer-default {
+    cursor: default;
+}
+
 .icon,
 .material-icons {
     -webkit-font-feature-settings: "liga"off, "dlig";
