--- a/views/app.pug
+++ b/views/app.pug
@@ -165,7 +165,7 @@ html(lang="en")
               | OnTech - Ontario Tech University
             a(href='https://www.linkedin.com/in/o-josephojo/' itemprop='url') linkedin 
     if true
-      a.skip-main(href="#main" tabindex="1" focus) Skip to main content
+      a.skip-main(href="#main" tabindex="0") Skip to main content
       //- dev
       //- Navbar etc...
       +header(page)
@@ -186,7 +186,7 @@ html(lang="en")
                 - let section = sections.section;
                   +sectionView(section)
 
-      main#main.main(tabindex="-1")
+      main#main.main(tabindex="1")
         - let layerLists = page.values;
 
         //- Page Layers
@@ -211,16 +211,16 @@ html(lang="en")
 
       .layer-action-center.layer-action-center-show
         article.layer-action-group
-          .layout-flex.layout-padding-horz
-            section.layout-spacer
-            section.layer-primary-dark.layer-shadow.layer-round
-              button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
-                span.btn-group
-                  i.icon.style-font-sz-24(inline) expand_less
-                  span.btn-section
-                    span.btn-spacer
-                    span.btn-content Back To Top
-                    span.btn-spacer
+          section.layer-primary-dark.layer-shadow.layer-round.layout-align-self-end.layout-margin-horz
+            button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
+              span.btn-group
+                i.icon.style-font-sz-24(inline) expand_less
+                span.btn-section
+                  span.btn-spacer
+                  span.btn-content Back To Top
+                  span.btn-spacer
+          //- .layout-flex.layout-padding-horz
+            //- section.layout-spacer
 
                 //- button.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
                 //-   span.btn-group.style-font-sz-24
@@ -231,7 +231,7 @@ html(lang="en")
 
       if !page.noFooter
         +footer("Made with ❤ by Okiki Ojo | ") 
-          span.btn
+          span.btn.pointer-default
             section.btn-group
               i.icon(inline) copyright
               span.btn-section
