--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -301,7 +301,7 @@
         position: fixed;
         bottom: 15px;
         z-index: 250;
-        width: 100%;
+        // width: 100%;
         right: 0;
 
         &-hide {
