Rendering perfornance boost

--- a/views/app.pug
+++ b/views/app.pug
@@ -186,7 +186,7 @@ html(lang="en")
                 - let section = sections.section;
                   +sectionView(section)
 
-      main#main.main(tabindex="1")
+      main#main.main
         - let layerLists = page.values;
 
         //- Page Layers
