--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -16,7 +16,7 @@ mixin hero(value, banner)
             section.layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder!= _title
             section.layer-main
-              h3.style-font-family-bold.style-font-weight-300.style-white.layer-main-text!= _content
+              h2.h3.style-font-family-bold.style-font-weight-300.style-white.layer-main-text!= _content
             section.layout-align-self-end
               a.layer-footer.btn.layer-round.layout-padding-horz-small.layout-padding-vert-smallest.layer-primary-dark.layer-shadow.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.layer-hero-scroll-down
                 span.btn-group
