--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -7,7 +7,7 @@ mixin image(value)
     .load-img
       .img-contain
         picture
-          each n in [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
+          each n in [3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
             - let val = n > 5 && n <= 8 ? 70 : (n <= 5 ? Math.max(70 - (n * 5), 45) * 10 : 100);
             source(media=`(max-width: ${n}00px)` srcset!=`${_src}.webp?w=${n + 1}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00w` type='image/webp')
             source(media=`(max-width: ${n}00px)` srcset!=`${_src}.jpg?w=${n + 1}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00w` type='image/jpeg')
@@ -17,7 +17,7 @@ mixin image(value)
           img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw" width="100vw")
         picture
           //- source(srcset!=`${_src}.webp?w=70&quality=100&effect=blur:150` sizes="100vw" type='image/webp' inline="inline")
-          img.placeholder-img(src!=`${_src}.jpg?w=100&quality=100&effect=blur:150` sizes="100w" alt=_alt  loading="lazy" width="100w" inline)
+          img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:120` sizes="50w" alt=_alt  loading="lazy" width="50w" inline)
         noscript Javascript is necesscary for this sites awesome experience.
           img.no-script-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="100vw")
     .layer-image-overlay
