--- a/views/app.pug
+++ b/views/app.pug
@@ -7,16 +7,16 @@ html(lang="en")
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     if dev
       meta(http-equiv='Content-Security-Policy' content=`
-      default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""}; 
+      default-src 'self' https://res.cloudinary.com/${cloud_name}/; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""}; 
       block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/${cloud_name}/;`)
 
     meta(name='robots' content='all')
     meta(name='title' content=page.title)
-    meta(name='DC.title' content=page.title)
-    meta(name='HandheldFriendly' content='true')
+    //- meta(name='DC.title' content=page.title)
+    //- meta(name='HandheldFriendly' content='true')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(name='shortlink' content=`https://www.josephojo.com/${page.name}`)
-    meta(name='canonical' content=`https://www.josephojo.com/${page.name}`)
+    meta(name='shortlink' content=`https://www.josephojo.com/`)
+    meta(name='canonical' content=`https://www.josephojo.com/`)
     meta(name='keywords' content='Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, website, netlify')
 
     meta(property='og:type' content='website')
@@ -35,8 +35,6 @@ html(lang="en")
 
     link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
     link(rel='preconnect' href='https://www.josephojo.com/' crossorigin)
-    //- link(rel='preconnect' href='https://fonts.gstatic.com/' crossorigin)
-    //- link(rel='preconnect' href='https://polyfill.io/' crossorigin)
 
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
     link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
@@ -48,10 +46,6 @@ html(lang="en")
     link(rel='apple-touch-icon', sizes='152x152', href='/apple-icon-152x152.png')
     link(rel='apple-touch-icon', sizes='180x180', href='/apple-icon-180x180.png')
 
-    //- link(rel="prefetch" href="manifest.webmanifest" as="fetch" crossorigin)
-    //- link(rel="prefetch" href="/favicon-32x32.png" as="image" crossorigin)
-    //- link(rel="prefetch" href="/android-icon-144x144.png" as="image" crossorigin)
-
     link(rel='icon', type='image/png', sizes='512x512', href='/android-icon-512x512.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/android-icon-192x192.png')
     link(rel='icon', type='image/png', sizes='144x144', href='/android-icon-144x144.png')
@@ -59,7 +53,6 @@ html(lang="en")
     link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
     link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
-    //- link(rel='icon', href='/favicon.ico', type='image/x-icon')
     link(rel='manifest', href='manifest.webmanifest')
     link(rel='home', href='https://www.josephojo.com/')
 
@@ -71,14 +64,7 @@ html(lang="en")
     link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-    //- link(rel="prefetch" href="./js/app.modern.min.js" as="script" type="text/javascript" crossorigin)
-
     link(rel='stylesheet' href='./css/app.min.css' inline async)
-
-      //- link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin)
-    //- link(rel="preload" href='./css/app.min.css' as="style" async)
-    //- link(rel="prefetch" href='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' as="script" crossorigin)
-    //- link(rel="preload" href='./js/app.modern.min.js' as="script")
 
     <!--[if lt IE 10]>
       link(rel='preconnect' href='https://cdnjs.cloudflare.com/' crossorigin)
@@ -131,16 +117,6 @@ html(lang="en")
         _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js");
         _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js");
        }
-
-    //- https://polyfill.io/v3/polyfill.min.js?flags=gated&features=HTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent
-    //- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js")
-    //- script(src="https://cdnjs.cloudflare.com/ajax/libs/smoothState.js/0.7.2/jquery.smoothState.min.js")
-    //- link(rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" as="script" async crossorigin="anonymous")
-    //- link(rel="preload" href='./js/app.modern.min.js' as="script" async crossorigin="anonymous")
-
-    //- link(rel='preconnect' href='https://polyfill.io/v3/')
-    //- link(rel='dns-prefetch' href='https://fonts.googleapis.com')
-    //- link(rel='stylesheet' async href='https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:500,900|Varela+Round:400|Montserrat:700,800|Roboto:400,600|Material+Icons&display=swap')
 
     include ./components/header.pug
     include ./components/layer.pug
@@ -219,15 +195,6 @@ html(lang="en")
                   span.btn-spacer
                   span.btn-content Back To Top
                   span.btn-spacer
-          //- .layout-flex.layout-padding-horz
-            //- section.layout-spacer
-
-                //- button.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
-                //-   span.btn-group.style-font-sz-24
-                //-     i.icon(inline) copyright
-                //-     span.btn-section
-                //-       span.btn-spacer
-                //-       span.btn-content 2019 Okiki Ojo
 
       if !page.noFooter
         +footer("Made with ❤ by Okiki Ojo | ") 
@@ -252,6 +219,6 @@ html(lang="en")
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
               h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
-    script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
-    if !debug
+    script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` async)
+    //- if !debug
       script(src=`./js/store.min.js` inline async)
