Enough for today

--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -30,15 +30,26 @@
         left: 0;
         top: 0;
 
-        picture {
+        & picture {
             position: relative;
             // // overflow: hidden;
             display: block;
             height: 100%;
+            z-index: 250;
             width: 100%;
             left: 0;
             top: 0;
-
+        }
+        
+        &-preview-img-card {
+            position: absolute;
+            background: $dark;
+            display: block;
+            height: 100%;
+            width: 100%;
+            z-index: 0;
+            left: 0;
+            top: 0;
         }
 
         &-overlay {
