--- a/src/scss/components/style.scss
+++ b/src/scss/components/style.scss
@@ -86,6 +86,8 @@
       @for $space from 0 to 10 {
          &-#{$space} {
             letter-spacing: #{$space}px;
+
+            @include deviceList(letter-spacing, #{$space}px);
          }
       }
    }
@@ -99,19 +101,27 @@
 
       &-small {
          line-height: 1;
+
+        @include deviceList(line-height, 1);
       }
 
       &-double {
          line-height: 2em;
+
+        @include deviceList(line-height, 2em);
       }
 
       &-large {
          line-height: 3em;
+
+        @include deviceList(line-height, 3em);
       }
 
-    //   @for $height from 0 through 25 {
-    //      &-#{$height * 5} {
-    //         line-height: #{$height * 5}px;
+    //   @for $height from 1 through 5 {
+    //      &-#{$height / 5} {
+    //         line-height: #{$height / 5}em;
+
+    //         @include deviceList(line-height, #{$height / 5}em);
     //      }
     //   }
    }
