--- a/views/app.pug
+++ b/views/app.pug
@@ -56,8 +56,8 @@ html(lang="en")
     link(rel='manifest', href='manifest.webmanifest')
     link(rel='home', href='https://www.josephojo.com/')
 
-    meta(name='theme-color', content='#4500ff')
-    meta(name='msapplication-TileColor', content='#4500ff')
+    meta(name='theme-color', content='#ffffff')
+    meta(name='msapplication-TileColor', content='#ffffff')
     meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
 
     link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
