--- a/views/app.pug
+++ b/views/app.pug
@@ -139,9 +139,9 @@ html(lang="en")
               | The porfolio of Joseph, it contains all amazing projects etc...
             span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
               | OnTech - Ontario Tech University
-            a(href='https://www.linkedin.com/in/o-josephojo/' itemprop='url') linkedin 
+            a(href='https://www.linkedin.com/in/o-josephojo/' itemprop='url' title="Link to Joseph's linkedin account") linkedin 
     if true
-      a.skip-main(href="#main" tabindex="0") Skip to main content
+      a.skip-main(href="#main" tabindex="0" title="Skip to main content") Skip to main content
       //- dev
       //- Navbar etc...
       +header(page)
