--- a/views/app.pug
+++ b/views/app.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset='utf-8')
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-    meta(http-equiv='Cache-Control' content='public, max-age=31536000')
+    //- meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     if dev
       meta(http-equiv='Content-Security-Policy' content=`
       default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""}; 
