--- a/views/app.pug
+++ b/views/app.pug
@@ -88,7 +88,8 @@ html(lang="en")
     script.
       var check = function () {
           "use strict";
-          if (typeof window.Symbol == "undefined") return false;
+          if (typeof window.Symbol == "undefined" || 
+              typeof window.IntersectionObserver == "undefined") return false;
           try {
               Function("class Foo {}") ();
               Function("let bar = x => x+1;") ();
