--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -18,7 +18,7 @@ mixin image(value)
           img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw" width="100vw")
         picture
           source(srcset!=`${_src}.webp?w=60&quality=100&effect=blur:120` sizes="60w" type='image/webp')
-          img.placeholder-img(src!=`${_src}.jpg?w=60&quality=100&effect=blur:120` sizes="60w" alt=_alt  loading="lazy" width="60w")
+          img.placeholder-img(src!=`${_src}.jpg?w=60&quality=100&effect=blur:120` sizes="60w" alt=_alt  loading="auto" width="60w")
         noscript Javascript is necesscary for this sites awesome experience.
           picture
             source(srcset!=`${_src}.webp` sizes="100vw" type='image/webp')
